--- a/Ponderada2/requirements.txt
+++ b/Ponderada2/requirements.txt
@@ -1,8 +1,8 @@
 Flask==2.2.0
 Flask-JWT-Extended==4.5.2
-Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
 Jinja2==3.1.2
 PyJWT==2.8.0
 SQLAlchemy==2.0.20
-psycopg2==2.9.1
+python-dotenv
+psycopg2-binary==2.9.7
