--- a/Ponderada4/docker-compose.yml
+++ b/Ponderada4/docker-compose.yml
@@ -1,19 +1,8 @@
 version: '3.8'
 
 services:
-  teste:
-    build:
-      context: ./teste
-      dockerfile: Dockerfile
-    ports:
-      - "5000:5000"
-    depends_on:
-      - postgres
-
   api:
-    build:
-      context: ./app
-      dockerfile: Dockerfile
+    image: pablorlv/api
     ports:
       - "8000:8000"
     depends_on:
