--- a/Ponderada4/app/.env
+++ b/Ponderada4/app/.env
@@ -2,3 +2,6 @@ POSTGRES_HOST=postgres
 POSTGRES_DB=database
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
+USER="Pablo"
+USERNAME="pablo"
+PASSWORD="$2b$12$EixZaYVK1fsbw1ZfbX3OXePaWxn96p36WQoeG6Lruj3vjPGga31lW" # secret
