--- a/Ponderada4/docker-compose.yml
+++ b/Ponderada4/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   api:
-    image: pablorlv/api
+    build:
+      context: ./app
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     depends_on:
