--- a/Ponderada4/docker-compose.yml
+++ b/Ponderada4/docker-compose.yml
@@ -2,18 +2,14 @@ version: '3.8'
 
 services:
   api:
-    build:
-      context: ./app
-      dockerfile: Dockerfile
+    image: pablorlv/ponderada4_api:latest
     ports:
       - "8000:8000"
     depends_on:
       - postgres
 
   model:
-    build:
-      context: ./db
-      dockerfile: Dockerfile
+    image: pablorlv/ponderada4_db:latest
     depends_on:
       - postgres
 
